--- a/configs/genmitsu_3018_PRO_Desktop.yaml
+++ b/configs/genmitsu_3018_PRO_Desktop.yaml
@@ -1,14 +1,4 @@
-machine_bounds:
-  x_min: -280.0
-  x_max: 0.0
-  y_min: -170.0
-  y_max: 0.0
-  z_min: -40.0
-  z_max: 0.0
-
-safe_z_height: -5.0
-homing_enabled: false
-camera_source: 0
+cnc:
 serial_port: "/dev/cu.usbserial-2130"
 
 locations:
