--- a/configs/deck.sample.yaml
+++ b/configs/deck.sample.yaml
@@ -14,27 +14,27 @@ labware:
     height_mm: 14.10
     calibration:
       a1:
-        x: -10.0
-        y: -10.0
-        z: -15.0
+        x: -15
+        y: -44.0
+        z: -0.0
       a2:
-        x: -1.0
-        y: -10.0
-        z: -15.0
-    x_offset_mm: 9.0
+        x: -15
+        y: -53.0
+        z: -0.0
+    x_offset_mm: -9.0
     y_offset_mm: -9.0
     capacity_ul: 200.0
     working_volume_ul: 150.0
 
-  vial_1:
-    type: vial
-    name: standard_vial
-    model_name: standard_1_5ml_vial
-    height_mm: 66.75
-    diameter_mm: 28.0
-    location:
-      x: -30.0
-      y: -40.0
-      z: -20.0
-    capacity_ul: 1500.0
-    working_volume_ul: 1200.0
+  # vial_1:
+  #   type: vial
+  #   name: standard_vial
+  #   model_name: standard_1_5ml_vial
+  #   height_mm: 66.75
+  #   diameter_mm: 28.0
+  #   location:
+  #     x: -30.0
+  #     y: -40.0
+  #     z: -20.0
+  #   capacity_ul: 1500.0
+  #   working_volume_ul: 1200.0
