Working mock mofcat run

--- a/configs/decks/mofcat_deck.yaml
+++ b/configs/decks/mofcat_deck.yaml
@@ -1,7 +1,7 @@
 # MOFcat deck configuration — labware only.
 
 labware:
-  wellplate_1:
+  plate_1:
     type: well_plate
     name: corning_96_well_360ul
     model_name: corning_3590_96well
@@ -12,14 +12,14 @@ labware:
     height_mm: 14.22
     calibration:
       a1:
-        x: -14.38
-        y: -11.24
-        z: -25.0
+        x: -17.88
+        y: -42.23
+        z: -20.0
       a2:
-        x: -5.38
-        y: -11.24
-        z: -25.0
-    x_offset_mm: 9.0
+        x: -17.88
+        y: -51.23
+        z: -20.0
+    x_offset_mm: -9.0
     y_offset_mm: -9.0
     capacity_ul: 360.0
     working_volume_ul: 200.0
