--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,6 @@ where = ["src", "."]
 include = ["data", "data.*", "deck", "deck.*", "gantry", "gantry.*",
            "instruments", "instruments.*", "protocol_engine", "protocol_engine.*",
            "board", "board.*"]
+
+[tool.pytest.ini_options]
+pythonpath = ["src", "."]
