Add desktop homing

--- a/configs/gantry/genmitsu_3018_PRO_Desktop.yaml
+++ b/configs/gantry/genmitsu_3018_PRO_Desktop.yaml
@@ -1,7 +1,7 @@
 # CUB — Genmitsu 3018 PRO Desktop (smaller gantry)
 serial_port: /dev/cu.usbserial-2130
 cnc:
-  homing_strategy: xy_hard_limits
+  homing_strategy: manual_origin
 
 working_volume:
   x_min: -300.0
